--- a/comps/src/App.css
+++ b/comps/src/App.css
@@ -13,6 +13,11 @@
   background-color: rgb(160, 185, 143);
   padding: 3% 0;
 }
+.modal{
+  background-color: rgb(255, 208, 0);
+  width: 50%;
+  margin: 0 auto;
+}
 /* REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP --- */
 /* REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP --- */
 /* REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP ---  REACT DEFAULT APP --- */
